# pydub-ng

./: .coveragerc  .gitignore  API.markdown  CONTRIBUTING.md  DEVELOPMENT.md  README.md  makefile  pyproject.toml  setup.py  tox.toml
.github/workflows/: ci-cd.yml
pydub/: __init__.py  audio_segment.py  effects.py  generators.py  pyaudioop.py  scipy_effects.py  silence.py  utils.py
test/: test.py
tests/: conftest.py  test.py  test_audio_segment.py  test_file_access.py  test_filters.py  test_generators.py  test_no_converter.py  test_partial_load.py  test_pathlike.py  test_silence.py
