[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydub-ng"
version = "0.1.0"
description = "Manipulate audio with an simple and easy high level interface"
readme = {file = "README.markdown", content-type = "text/markdown"}
authors = [
    {name = "James Robert", email = "jiaaro@gmail.com"},
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 7 - Inactive",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Multimedia :: Sound/Audio :: Editors",
    "Topic :: Multimedia :: Sound/Audio :: Mixers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
keywords = ["audio", "sound", "high-level"]
dependencies = [
    "audioop-lts>=0.2.1; python_version >= '3.13'"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=4.1.0", "pytest-datadir>=1.4.1"]

[project.urls]
Homepage = "https://github.com/medecau/pydub-ng"
Repository = "https://github.com/medecau/pydub-ng"

[tool.setuptools.packages.find]
include = ["pydub*"]

# Version is defined here as the single source of truth

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]  # Ignore line too long errors in existing code

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.tox]
requires = ["tox>=4"]
env_list = ["lint", "3.11", "3.12", "3.13"]

[tool.tox.env_run_base]
description = "run unit tests"
deps = ["pytest>=8", "pytest-datadir>=1.4.1"]
commands = [["pytest", "tests/", "-v"]]

[tool.tox.env.lint]
description = "run linters and code formatters"
skip_install = true
deps = ["ruff"]
commands = [
    ["ruff", "check", "."],
    ["ruff", "format", "--check", "."]
]